creusot/tests/should_fail/ghost/output_non_ghost.stderr
error: the return type of a ghost! block should be either () or a GhostBox
 --> output_non_ghost.rs:5:13
  |
5 |     let _ = ghost!(1);
  |             ^^^^^^^^^
  |
note: return type is i32
 --> output_non_ghost.rs:5:13
  |
5 |     let _ = ghost!(1);
  |             ^^^^^^^^^
  = note: this error originates in the macro `ghost` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

